fixed header sizing going off screen

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -189,7 +189,6 @@ svg text {
 }
 .signup-form-header {
   text-align: center;
-  width: 85dvw;
 }
 
 .form-row {
